made sure footer stays at bottom, fixed scrollbar jumping

--- a/src/components/Footer/index.module.css
+++ b/src/components/Footer/index.module.css
@@ -1,5 +1,6 @@
 .footer {
-  padding: 2em 0;
+  position: absolute;
+  bottom: 4em;
 }
 
 .svg-icon-container {
